# vizionsdk-opencv

./: .gitignore  CMakeLists.txt  README.md
config/: VxConfig.conf
cpp/: CMakeLists.txt  README.md  captureImg.cpp  displayImg.cpp  saveImg.cpp  setehdr.cpp  vizionsdk_cv_saveimg.cpp  vizionsdk_ehdr.cpp  vizionsdk_opencv.cpp  vizionsdkcapture.cpp
csharp/: README.md
csharp/captureImg/: captureImg.cs
csharp/displayImg/: displayImg.cs  displayImg.csproj
csharp/saveImg/: saveImg.cs
csharp/setehdr/: setehdr.cs  setehdr.csproj
lib/Ubuntu/: libVizionSDK.so.25
lib/Windows/: VizionSDK.exp  VizionSDK.lib
python/: README.md  captureImg.py  displayImg.py  pyvizionsdk_cv.py  pyvizionsdk_cv_saveimg.py  pyvizionsdk_ehdr.py  pyvizionsdkcapture.py  saveImg.py  setehdr.py
src/c++/: VizionSDK.h  vizionsdk_opencv.cpp  vizionsdkcapture.cpp
src/cpp/: vizionsdkcapture.cpp
src/python/: pyvizionsdk_cv.py  pyvizionsdkcapture.py
